--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,7 @@ body {
   font-family: Calibri, sans-serif;
 }
 
-p, a, ul, li, h1, h2, h3, h4, h5, h6, input, textarea, button {
+p, a, ul, li, h1, h2, h3, h4, h5, h6, input, textarea, button, select, option {
   font-family: Calibri, sans-serif;
   color: rgb(37, 37, 37);
 }
