--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,6 @@
 body {
   font-family: Calibri, sans-serif;
+  background-color: rgb(83, 83, 83);
 }
 
 p, a, ul, li, h1, h2, h3, h4, h5, h6, input, textarea, button, select, option {
